Added more explanation on triangulation, fixed an alert bug, reworded reference to 3-color proof

--- a/triangulation.html
+++ b/triangulation.html
@@ -10,6 +10,9 @@
     <p>Finding the minimum number of guards for an arbitrary art gallery can be quite hard!</p>
     <p>To make it a little easier, we can break any polygonal gallery into triangular subgalleries (without adding any vertices)!</p>
     <p>Try decomposing the galleries from last lesson by removing vertices one at a time.</p>
+    <p>Not all vertices can be removed
+    for a given polygon. If you try to remove the wrong vertex, it will turn red until you successfully remove another vertex.
+    Keep trying until you find it, there's always at least one vertex that can be removed!</p>
 
 </div>
 <div class="container">
