More user feedback

--- a/harderShapes.html
+++ b/harderShapes.html
@@ -10,6 +10,7 @@
         <p>If a guard can see both ends of a wall, the guard can see the whole wall. Below, guards will light up walls that they're watching.</p>
         <p>Some galleries are harder to guard than others! See if you can find the minimum number of guards for each of these galleries.</p>
         <p>Remember, we want all of the walls to light up!</p>
+        <p>Once you have an answer for each gallery, click the Check! button.</p>
 
     </div>
     <div class="container">
