--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p>The art in our gallery is on the walls, so the guards must be able to see the entirety of every edge of the gallery. If a guard can see both vertices for a given edge,
         he can see the whole edge.</p>
         <p>Click in the gallery to place a guard, click and drag existing guards to move them, and drag guards out of the gallery to delete them.</p>
-        <p>Guards that you place will draw lines to all three corners of the gallery. No matter where you place a guard
-            in a triangular gallery, he will be able to see the whole gallery. This is because triangles are CONVEX polygons.</p>
+        <p>Guards that you place will draw lines to every corner of the gallery. No matter where you place a guard
+            in the gallery, he will be able to see the whole gallery. This is because these galleries are CONVEX polygons.</p>
     </div>
     <div class="container">
         <div class="left">
